--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,6 @@ width:100%;}
     width: 100%;
     float: left;
     position: absolute;
-    top: 376px;
     background: red;
     height: 25px;
 }
@@ -185,4 +184,10 @@ width:100%;}
 	.fb-icon span {
   position: relative;
   top: -2px;
+}
+.col-md-12 {
+  float: left;
+}
+#capture {
+  height: 346px;
 }
