--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@
 		float:left;
 		}
 		#capture{
-		background-image:url(bg_img/Tulips.jpg);
+		background-image:url(../bg_img/Tulips.jpg);
 		background-size: 100% 100% !important;
 		height: 100%;
 }
