--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ width:100%;}
     font-size: 17px;
     position: relative;
     left: 14px;
+    top: -1px;
 }
 .add {
     text-align: right;
@@ -157,6 +158,7 @@ width:100%;}
     text-transform: uppercase;
     position: relative;
     right: 14px;
+    top: -1px;
 }
 .top {
     width: 86%;
